# HPCpp

./: .gitignore  README.md
_singularity/: ubuntu22-cuda11.def
_utils/: random.h
cpp/libint-hf/: .gitignore  CMakeLists.txt  LICENSE  README.md  hf.cpp
cpp/libint-hf/cmake/: FindLibint2.cmake
cpp/libint-hf/spack/: repo.yaml
cpp/llvm-ir/: CMakeLists.txt  README.md  main.cpp
cpp/lru_cache/: CMakeLists.txt  README.md  main.cpp
cpp/soa_vs_aos_pairwise/: CMakeLists.txt  main.cpp
cpp/stdexec/bulk/: bulk.cpp
cpp/stdexec/example/: CMakeLists.txt  example.cpp
cpp/stdthread/approximate-counter/: CMakeLists.txt  main.cpp
cpp/stdthread/atomic/: CMakeLists.txt  main.cpp
cpp/stdthread/helloworld/: CMakeLists.txt  main.cpp
cuda/cudaPointerGetAttribute/: CMakeLists.txt
cuda/cudaPointerGetAttributes/: ptr.cpp
cuda/matmul/: CMakeLists.txt  benchmark.cu  mm.cpp  mm.cu  mm_cu.h  mm_serial.h  tests.cu
dlopen/: CMakeLists.txt  handle.h  lib.cpp  main.cpp
dlopen/automatic-plugin-registration/: REAMDE.md  handle.h  lib.cpp  main.cpp
dlopen/manually-loading-symbols/: fh.sh  lib.cpp  main.cpp
hdf5/quantumespresso/: CMakeLists.txt  README.md  main.cpp
hip/hello/: CMakeLists.txt  hello.hip
hpx/helllllo/: CMakeLists.txt  main.cpp
hpx/hello/: CMakeLists.txt  README.md  main.cpp
kokkos/pytorch/: CMakeLists.txt  main.cpp
lru_cache/: CMakeLists.txt  cache.h  main.cpp
mpi/hello/: CMakeLists.txt  main.cpp
nvpl/: CMakeLists.txt  main.cpp
nvpl/cmake/: Findcustom-blas.cmake  Findcustom-lapack.cmake  Findcustom-scalapack.cmake
pika/helllllo/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt
python/extension/: README  mmmodule.c  pyproject.toml  test.py
python/numpy/: CMakeLists.txt  README.md  main.cpp
stdexec/bulk/: CMakeLists.txt
umpire/: CMakeLists.txt  main.cpp
umpire/quickpool_alignment/: CMakeLists.txt  README.md  main.cpp
utils/: timer.cpp  timer.h
